spacing fix #101

--- a/client/devel.import.less
+++ b/client/devel.import.less
@@ -487,7 +487,8 @@ footer {
 
   .app-header-icon {
     .pull-left();
-    padding-right: 8px;
+    padding-left: 8px;
+    padding-right: 4px;
   }
 
   label {
@@ -496,7 +497,7 @@ footer {
     cursor: pointer;
     font-size: @font-size-base;
     font-weight: normal;
-    margin: 8px @grid-gutter-width/2 0 0;
+    margin: 9px @grid-gutter-width/2 0 0;
   }
 }
 
